--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,2 +1,9 @@
-spring.profiles.active=test
+spring.profiles.active=${APP_PROFILE:test}
+
 spring.jpa.open-in-view=false
+
+security.oauth2.client.client-id=${CLIENT_ID:dscatalog}
+security.oauth2.client.client-secret=${CLIENT_SECRET:dscatalog}
+
+jwt.secret=${JWT_SECRET:dscatalog}
+jwt.duration=${JWT_DURATION:86400}
